test without yaml which seems to fail?

--- a/_posts/2013-03-02-test.md
+++ b/_posts/2013-03-02-test.md
@@ -17,7 +17,7 @@ $articles = array(
 );
 {% endhighlight %}
 
-{% highlight HTML %}
+{% highlight html %}
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/desert.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/freya.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/inkpot.css" disabled>
@@ -28,21 +28,4 @@ $articles = array(
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/railscasts.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/rdark.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/slate.css">
-{% endhighlight %}
-
-
-
-{% highlight YAML %}
-name: "Olivier Patry"
-description: "Personal website of Olivier Patry."
-
-auto: true
-server: true
-exclude: ['README.md']
-
-paginate: 8
-
-markdown: rdiscount
-permalink: pretty
-pygments: true
 {% endhighlight %}
