--- a/_posts/2013-03-02-test.md
+++ b/_posts/2013-03-02-test.md
@@ -29,3 +29,18 @@ $articles = array(
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/rdark.css" disabled>
 <link rel="stylesheet" type="text/css" href="/styles/pygments/vim/slate.css">
 {% endhighlight %}
+
+{% highlight yaml %}
+name: "Olivier Patry"
+description: "Personal website of Olivier Patry."
+
+auto: true
+server: true
+exclude: ['README.md']
+
+paginate: 8
+
+markdown: rdiscount
+permalink: pretty
+pygments: true
+{% endhighlight %}
