--- a/_posts/2013-03-19-git-memo.md
+++ b/_posts/2013-03-19-git-memo.md
@@ -8,3 +8,29 @@ Add to `~/.bashrc` (`~/.profile` or whatever you deem appropriate).
 	fi
 
 [via](http://www.vogella.com/blog/2013/03/19/git-auto-completion-for-the-bash-shell/)
+
+# Git Prompt Colors
+
+	$ git config --global color.ui true
+
+[via](http://git-scm.com/book/en/Customizing-Git-Git-Configuration#Colors-in-Git)
+
+Custom colorization parameters can be done (see doc). As an example:
+
+	[color]
+	  ui = auto
+	[color "branch"]
+	  current = yellow reverse
+	  local = yellow
+	  remote = green
+	[color "diff"]
+	  meta = yellow bold
+	  frag = magenta bold
+	  old = red bold
+	  new = green bold
+	[color "status"]
+	  added = yellow
+	  changed = green
+	  untracked = cyan
+
+[via](http://nathanhoad.net/how-to-colours-in-git)
