--- a/_posts/2013-03-19-git-memo.md
+++ b/_posts/2013-03-19-git-memo.md
@@ -1,3 +1,8 @@
+---
+title: Git memo
+layout: markdown
+comments: false
+---
 # Bash Git auto completion
 [git-completion.bash in the main Git repository](http://git.kernel.org/?p=git/git.git;a=blob_plain;f=contrib/completion/git-completion.bash;hb=HEAD).
 
