[wip] migrate site from jekyll to nanoc
still miss:
* pagination
* deploy via FTP
* travis CI
* checks

--- a/content/posts/2013-03-19-git-memo.md
+++ b/content/posts/2013-03-19-git-memo.md
@@ -8,25 +8,25 @@ comments: false
 
 Add to `~/.bashrc` (`~/.profile` or whatever you deem appropriate).
 
-{% highlight bash %}
+``` bash
 if [ -f ~/.git-completion.bash ]; then
 	. ~/.git-completion.bash
 fi
-{% endhighlight %}
+```
 
 [via](http://www.vogella.com/blog/2013/03/19/git-auto-completion-for-the-bash-shell/)
 
 # Git Prompt Colors
 
-{% highlight bash %}
-$ git config --global color.ui true
-{% endhighlight %}
+  ``` bash
+  $ git config --global color.ui true
+  ```
 
 [via](http://git-scm.com/book/en/Customizing-Git-Git-Configuration#Colors-in-Git)
 
 Custom colorization parameters can be done (see doc). As an example:
 
-{% highlight ini %}
+``` ini
 [color]
   ui = auto
 [color "branch"]
@@ -42,6 +42,6 @@ Custom colorization parameters can be done (see doc). As an example:
   added = yellow
   changed = green
   untracked = cyan
-{% endhighlight %}
+```
 
 [via](http://nathanhoad.net/how-to-colours-in-git)
