--- a/content/posts/2014-01-04-pip-memo.md
+++ b/content/posts/2014-01-04-pip-memo.md
@@ -7,19 +7,19 @@ comments: false
 
 For an up to date version of PIP, the better is to use the `get-pip` installer:
 
-{% highlight bash %}
+``` bash
 $ wget https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py
 $ sudo python ez_setup.py
 $ wget https://raw.github.com/pypa/pip/master/contrib/get-pip.py
 $ sudo python get-pip.py
 $ pip --version
-{% endhighlight %}
+```
 
 Alternatively, using APT:
 
-{% highlight bash %}
+``` bash
 $ sudo apt-get install python-pip
-{% endhighlight %}
+```
 
 But chances are that the packaged version is old (in early 2014, Ubuntu 12.04 (last LTS at this time) provides the 1.0 version, the `get-pip` installer provides the 1.5).
 
