--- a/content/error/404.md
+++ b/content/error/404.md
@@ -1,6 +1,9 @@
 ---
 title: Document Not Found
-layout: default
 ---
 
+# Document Not Found
+
 Sorry, the document your were looking for could not be found.
+
+🏠 <%= link_to('Back to home', @items['/index.*'].path) %>
